# MemeHunter

./: .gitignore  Anchor.toml  Cargo.toml  README.md  check_output.txt  check_output_2.txt  check_output_3.txt  check_output_4.txt  decode.js  decode_key.py  package-lock.json  package.json  tsconfig.json
.agent/rules/: rulesinchinese.md
contracts/: .env.example  foundry.toml
contracts/cache/: solidity-files-cache.json  test-failures
contracts/script/: Deploy.s.sol
contracts/src/: MemeHunter.sol
contracts/test/: MemeHunter.t.sol
design-system/memehunter/: MASTER.md
docs/: MEmeHunter.md  project_introduction.md
docs/01_需求设计/: MemeHunter需求设计.md  P0空投领取与钱包监听需求设计.md  P1代币暂存与分发需求设计.md  国际化需求设计.md  房间模式需求.md  钱包登录注册需求设计.md
docs/02_开发计划/: MemeHunter开发任务.md  MemeHunter技术设计.md  P1代币暂存技术设计.md  Solana全面迁移计划.md  Solana前端适配计划.md  Solana技术设计.md  前端开发计划.md  合约开发计划.md  后端开发计划.md  钱包登录注册技术设计.md
docs/03_开发日志/: 开发日志.md
docs/03_接口文档/: 后端接口文档.md
docs/03_部署文档/: MemeHunter部署结构.md
docs/04_模块规格/: Solana模块规格.md
docs/05_经验沉淀/: 常见问题.md
docs/plans/: 2026-01-27-contract-mechanism-redesign.md
frontend/: build_log.txt  index.html  package-lock.json  package.json  tailwind.config.js  test_output.txt  test_solana.cjs  test_solana.ts  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  polyfills.ts
programs/meme-hunter/: Cargo.toml
programs/meme-hunter-legacy/: Cargo.toml
programs/meme-hunter-legacy/.cargo/: config.toml
programs_backup_legacy/src/: lib.rs  state.rs
server/: package-lock.json  package.json
tests/: meme-hunter.ts
tools/: check_devnet.ts
(+110 files in other folders)
