[package]
name = "meme-hunter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
solana-define-syscall = { version = "4.0.1", features = ["unstable-static-syscalls"] }
pinocchio = { version = "0.8.0", default-features = false }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
